<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/catalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalog"
        app:layout_constraintEnd_toEndOf="@+id/force"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/force"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/force_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catalog" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/force" />

    <Button
        android:id="@+id/continue_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueBut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_game" />

    <Button
        android:id="@+id/bluetooth_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_client"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_game" />
    <Button
        android:id="@+id/load_ai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_ai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_client" />
    <Button
        android:id="@+id/load_scenario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_scenario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_ai" />
    <Button
        android:id="@+id/create_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

