<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <TextView
        android:id="@+id/hit_miss_ind"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/blank_string"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/check_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/hit_miss_ind"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/check_pass_no"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/to_hit"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/tohitframe"
        app:layout_constraintStart_toEndOf="@+id/check_name"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hit_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/hit"
        app:layout_constraintStart_toEndOf="@+id/check_pass_no"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/miss_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/miss"
        app:layout_constraintStart_toEndOf="@+id/hit_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/auto_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/auto"
        app:layout_constraintStart_toEndOf="@+id/miss_button"
        app:layout_constraintTop_toTopOf="parent" />

    <com.total.overiden.TwoDSixView
        android:id="@+id/to_hit_dice"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/roll"
        app:layout_constraintStart_toEndOf="@+id/check_pass_no"
        app:layout_constraintTop_toTopOf="parent"  />

    <TextView
        android:id="@+id/success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hit"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="676dp"
        tools:layout_editor_absoluteY="14dp"
        app:layout_constraintStart_toEndOf="@+id/to_hit_dice"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>