<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <TextView
        android:id="@+id/hit_miss_ind"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/blank_string"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weapon_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/hit_miss_ind"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weapon_location"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/loc"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/weapon_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/destroyed_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weapon Destroyed"
        android:textColor="@color/DarkRed"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/weapon_location"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>